# GoogleFindMy-HA

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION.md  CHANGELOG.md  INSTALLATION.md  Makefile  README.md  __init__.py  api.py  audit.json  bandit.yaml  config_flow.py  gpsoauth.pyi  hacs.json  http_ece.pyi  icons.json  manifest.json  package-lock.json  package.json  pyproject.toml  pyscrypt.pyi  requirements-dev.txt  requirements-ha-stubs.txt  requirements-options-flow-tests.txt  strings.json  sync_gfm_upstream.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  hassfest-auto-fix.yml  pip-audit.yml  python-tests.yml  semgrep-autofix.yml  semgrep.yml
Auth/: fcm_receiver_ha.py  secrets.json.example  spot_token_retrieval.py  token_cache.py  username_provider.py
FMDNCrypto/: foreign_tracker_cryptor.py
KeyBackup/: cloud_key_decryptor.py  lskf_hasher.py
NovaApi/ExecuteAction/PlaySound/: start_sound_request.py
SpotApi/: spot_request.py
SpotApi/GetEidInfoForE2eeDevices/: get_owner_key.py
assets/: chrome_driver.py
custom_components/: __init__.py
custom_components/googlefindmy/: AGENTS.md  BOOKMARKS.md  FMDN.md  __init__.py  __init__.pyi  api.py  binary_sensor.py  button.py  chrome_driver.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  discovery.py  email.py  entity.py  example_data_provider.py  exceptions.py  get_oauth_token.py  google_home_filter.py  ha_typing.py  icons.json  integration_modules.py  location_recorder.py  manifest.json  map_view.py  protobuf_typing.pyi  quality_scale.yaml  requirements-dev.txt  requirements.txt  sensor.py  services.py  services.yaml  standalone_oauth.py  storage.py  strings.json  system_health.py  typing_utils.py  util_services.py
custom_components/googlefindmy/Auth/: AGENTS.md  __init__.py  aas_token_retrieval.py  adm_token_retrieval.py  auth_flow.py  fcm_receiver.py  fcm_receiver_ha.py  gpsoauth_loader.py  spot_token_retrieval.py  token_cache.py  token_retrieval.py  username_provider.py
custom_components/googlefindmy/Auth/firebase_messaging/: __init__.py  _typing.py  const.py  fcmpushclient.py  fcmregister.py
custom_components/googlefindmy/FMDNCrypto/: AGENTS.md  __init__.py  _ecdsa_shim.py  eid_generator.py  foreign_tracker_cryptor.py  key_derivation.py  sha.py
custom_components/googlefindmy/KeyBackup/: __init__.py  cloud_key_decryptor.py  lskf_hasher.py  response_parser.py  shared_key_flow.py  shared_key_request.py  shared_key_retrieval.py
custom_components/googlefindmy/NovaApi/: __init__.py  nova_request.py  scopes.py  util.py
custom_components/googlefindmy/NovaApi/ExecuteAction/: __init__.py  location_request.py  nbe_execute_action.py
custom_components/googlefindmy/NovaApi/ListDevices/: __init__.py  nbe_list_devices.py
custom_components/googlefindmy/ProtoDecoders/: AGENTS.md  Common.proto  Common_pb2.py  Common_pb2.pyi  DeviceUpdate.proto  DeviceUpdate_pb2.py  DeviceUpdate_pb2.pyi  LocationReportsUpload.proto  LocationReportsUpload_pb2.py  LocationReportsUpload_pb2.pyi  __init__.py  decoder.py
custom_components/googlefindmy/SpotApi/: __init__.py  grpc_parser.py  spot_request.py
custom_components/googlefindmy/SpotApi/CreateBleDevice/: __init__.py  config.py  create_ble_device.py  util.py
custom_components/googlefindmy/SpotApi/GetEidInfoForE2eeDevices/: __init__.py  get_eid_info_request.py  get_owner_key.py
custom_components/googlefindmy/SpotApi/UploadPrecomputedPublicKeyIds/: __init__.py  upload_precomputed_public_key_ids.py
custom_components/googlefindmy/__init__/: __init__.py
custom_components/googlefindmy/tests/: test_config_flow.py  test_connectivity_sensor.py  test_coordinator_hybrid_update.py  test_fcm_receiver.py
custom_components/googlefindmy/translations/: de.json  en.json  es.json  fr.json  it.json  pl.json  pt-BR.json  pt.json
docs/: AI_DEPRECATIONS_GUIDE.md  AI_MAINTENANCE_TASKLIST.md  CONFIG_SUBENTRIES_HANDBOOK.md  SEMANTIC_LOCATION_MAPPING.md  TRIGGER_MECHANISMS.md  entity_creation_issue_analysis.md
google/protobuf/: __init__.pyi  descriptor.pyi  json_format.pyi  message.pyi
google/protobuf/internal/: __init__.pyi  containers.pyi  enum_type_wrapper.pyi
script/: AGENTS.md  __init__.py  bootstrap_ssot_cached.sh  bootstrap_truststore.py  clean_node_modules.py  clean_pycache.py  connectivity_probe.py  install_options_flow_test_deps.sh  list_typing_helpers.py  list_wheelhouse.py  local_verify.py  quiet_apply_patch.py  rg_proto_snippet.sh  ssot_wheel_manifest.txt  sync_translations.py  translation_key_check.py
script/hassfest/: __init__.py  __main__.py
script/precommit_hooks/: ruff_format.py  update_doctoc.py
tests/: AGENTS.md  __init__.py  conftest.py  test_aas_token_retrieval.py  test_adm_token_retrieval.py  test_api_device_list_dedup.py  test_api_fcm_token_scoping.py  test_api_guard_logging.py  test_api_location_selection.py  test_api_select_best_location.py  test_auth_flow.py  test_binary_sensor_icons.py  test_binary_sensor_subentry_setup.py  test_blocking_imports.py  test_button_restore_state.py  test_button_service_registration.py  test_button_setup.py  test_button_subentry_setup.py  test_callback_stub_lint.py  test_chrome_driver.py  test_cli_entry_selection.py  test_cli_sound_request_entry_selection.py  test_cloud_discovery_trigger.py  test_config_entry_deduplication.py  test_config_entry_migration.py  test_config_entry_startup.py  test_config_flow.py  test_config_flow_basic.py  test_config_flow_discovery.py  test_config_flow_fcm_extraction.py  test_config_flow_hub_entry.py  test_config_flow_initial_auth.py  test_config_flow_reconfigure.py  test_config_flow_registration.py  test_config_flow_subentry_sync.py  test_config_schema.py  test_coordinator.py  test_coordinator_device_registry.py  test_coordinator_owner_index.py  test_coordinator_predictive_polling.py  (+79 more)
tests/helpers/: README.md  __init__.py  ast_extract.py  asyncio.py  cache.py  config_entries_stub.py  config_flow.py  constants.py  homeassistant.py  homeassistant_stub.py  stub_coordinator_debug.py
(+18 files in other folders)
